[project]
name = "daphne"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.8",
]

[project.scripts]
daphne = "main:main"

[tool.setuptools]
py-modules = ["main", "database", "exchange", "scheduler", "bot", "rbac", "downloader"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"





